<resources>
    <string name="app_name">ProFarm</string>
    <string name="string_name">Manager on Duty<font color="#ff0000"><bold>*</bold></font></string>
    <string name="title_activity_usermai">usermai</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_voice_rec">action voice rec</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="querysuggestions">
        <item>chethan</item>
        <item>wheat</item>
        <item>rice</item>
    </string-array>
    <string name="adid">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>


    <string name="my_preference">"com.chethankumar.com.MyPref"</string>
    <string name="my_preference_key">"com.chethankumar.com.MyPrefKey"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_showmore2">showmore2</string>
    <string name="location">location</string>
    <string name="location_key">location_key</string>
    <string name="defaultvalue">default</string>
    <string name="title_activity_usermai2">usermai2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_search">Advanced</string>
    <string name="profile">Profile</string>
    <string name="default_notification_channel_id">Chethan7</string>
    <string name="shopbycategory">
         Shop by Category
    </string>


    <string name="Grains">grains</string>
    <string name="Vegetables">Vegetables</string>
    <string name="Greens">Greens</string>
    <string name="Fruits">Fruits</string>
    <string name="DryFruit">DryFruit</string>
    <string name="Others">Others</string>
    <string name="donate">* We are a small team striving hard to innovate something. Even a small amount of money you donate to us will matter a lot. So that we can come up with some good thoughts to help you.</string>


    <string name="FAT">FAT</string>
    <string name="PROTEIN">PROTEIN</string>
    <string name="CARBS">CARBOHYDRATES</string>
    <string name="FIBRE">FIBRE</string>
    <string name="CALCIUM">CALCIUM</string>
    <string name="POTASSIUM">POTASSIUM</string>
    <string name="IRON">IRON</string>
    <string name="CHOLESTROL">CHOLESTROL</string>
    <string name="VITAMINA">VITAMIN A</string>
    <string name="VITAMINC">VITAMIN C</string>
    <string name="SODIUM">SODIUM</string>
    <string name="inn">New era of \"FARMING\"</string>


    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>


</resources>
