<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/searchblack"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/wishlist"
        android:title="@string/title_wishlist" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/notifications"
        android:title="Notifications" />



</menu>
